Fixing a alignment issue with the quote section.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -985,6 +985,7 @@ textarea {
 }
 
 blockquote {
+  position: relative;
   display: grid;
   grid-area: 1/-1/1/-1;
   gap: 2rem;
@@ -996,12 +997,7 @@ blockquote {
   transition: 500ms all;
   translate: 0 -1rem;
 }
-blockquote p {
-  position: relative;
-  font: 700 1.25rem/1.5 var(--font-title);
-  color: var(--text-body-primary);
-}
-blockquote p::before {
+blockquote::before {
   content: "\f10e";
   position: absolute;
   inset: auto auto calc(100% + 1rem) 0;
@@ -1010,6 +1006,12 @@ blockquote p::before {
   aspect-ratio: 1;
   font: 700 3rem/1 "Font Awesome 6 Sharp";
   color: var(--brand);
+}
+blockquote p {
+  position: relative;
+  font: 700 1.25rem/1.5 var(--font-title);
+  color: var(--text-body-primary);
+  align-self: center;
 }
 blockquote footer {
   display: flex;
